clean up Config, make tests run

--- a/tests/test_config.ipynb
+++ b/tests/test_config.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,27 +29,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/Users/maye/Library/CloudStorage/Dropbox/src/planetarypy/src/planetarypy/data')"
+       "PosixPath('/home/ayek72/Dropbox/src/planetarypy/src/planetarypy/data')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files('planetarypy.data')"
+    "files(\"planetarypy.data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,18 +71,17 @@
       "      \"iss\": {\n",
       "        \"indexes\": {\n",
       "          \"index\": {\n",
-      "            \"timestamp\": \"2023-06-19T20:55:45.702690\",\n",
       "            \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_index.lbl\"\n",
       "          },\n",
       "          \"inventory\": {\n",
       "            \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_inventory.lbl\"\n",
       "          },\n",
       "          \"moon_summary\": {\n",
-      "            \"timestamp\": \"\",\n",
+      "            \"timestamp\": \"2019-06-08T16:28:22\",\n",
       "            \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_moon_summary.lbl\"\n",
       "          },\n",
       "          \"ring_summary\": {\n",
-      "            \"timestamp\": \"\",\n",
+      "            \"timestamp\": \"2022-08-08T11:54:51.140376\",\n",
       "            \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_ring_summary.lbl\"\n",
       "          },\n",
       "          \"saturn_summary\": {\n",
@@ -175,7 +174,7 @@
       "        \"index_required\": \"\",\n",
       "        \"indexes\": {\n",
       "          \"edr\": {\n",
-      "            \"timestamp\": \"2022-12-25T11:27:34.802930\",\n",
+      "            \"timestamp\": \"2024-03-19T14:55:02.840504\",\n",
       "            \"url\": \"\"\n",
       "          }\n",
       "        },\n",
@@ -189,17 +188,18 @@
       "            \"url\": \"https://hirise-pds.lpl.arizona.edu/PDS/INDEX/DTMCUMINDEX.LBL\"\n",
       "          },\n",
       "          \"edr\": {\n",
+      "            \"timestamp\": \"2024-04-30T21:31:58\",\n",
       "            \"url\": \"https://hirise-pds.lpl.arizona.edu/PDS/INDEX/EDRCUMINDEX.LBL\"\n",
       "          },\n",
       "          \"rdr\": {\n",
-      "            \"timestamp\": \"2022-12-25T11:25:53.149176\",\n",
+      "            \"timestamp\": \"\",\n",
       "            \"url\": \"https://hirise-pds.lpl.arizona.edu/PDS/INDEX/RDRCUMINDEX.LBL\"\n",
       "          }\n",
       "        }\n",
       "      }\n",
       "    }\n",
       "  },\n",
-      "  \"storage_root\": \"/Users/maye/planetarypy_data\"\n",
+      "  \"storage_root\": \"/media/ayek72/data/planetarypy\"\n",
       "}\n"
      ]
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,18 +221,17 @@
       "  \"iss\": {\n",
       "    \"indexes\": {\n",
       "      \"index\": {\n",
-      "        \"timestamp\": \"2023-06-19T20:55:45.702690\",\n",
       "        \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_index.lbl\"\n",
       "      },\n",
       "      \"inventory\": {\n",
       "        \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_inventory.lbl\"\n",
       "      },\n",
       "      \"moon_summary\": {\n",
-      "        \"timestamp\": \"\",\n",
+      "        \"timestamp\": \"2019-06-08T16:28:22\",\n",
       "        \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_moon_summary.lbl\"\n",
       "      },\n",
       "      \"ring_summary\": {\n",
-      "        \"timestamp\": \"\",\n",
+      "        \"timestamp\": \"2022-08-08T11:54:51.140376\",\n",
       "        \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_ring_summary.lbl\"\n",
       "      },\n",
       "      \"saturn_summary\": {\n",
@@ -270,12 +269,12 @@
     }
    ],
    "source": [
-    "pprint(config['missions']['cassini'])"
+    "pprint(config[\"missions\"][\"cassini\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -286,18 +285,17 @@
       "  \"iss\": {\n",
       "    \"indexes\": {\n",
       "      \"index\": {\n",
-      "        \"timestamp\": \"2023-06-19T20:55:45.702690\",\n",
       "        \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_index.lbl\"\n",
       "      },\n",
       "      \"inventory\": {\n",
       "        \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_inventory.lbl\"\n",
       "      },\n",
       "      \"moon_summary\": {\n",
-      "        \"timestamp\": \"\",\n",
+      "        \"timestamp\": \"2019-06-08T16:28:22\",\n",
       "        \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_moon_summary.lbl\"\n",
       "      },\n",
       "      \"ring_summary\": {\n",
-      "        \"timestamp\": \"\",\n",
+      "        \"timestamp\": \"2022-08-08T11:54:51.140376\",\n",
       "        \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_ring_summary.lbl\"\n",
       "      },\n",
       "      \"saturn_summary\": {\n",
@@ -335,12 +333,12 @@
     }
    ],
    "source": [
-    "pprint(config['missions']['cassini'])"
+    "pprint(config[\"missions\"][\"cassini\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -350,18 +348,17 @@
       "{\n",
       "  \"indexes\": {\n",
       "    \"index\": {\n",
-      "      \"timestamp\": \"2023-06-19T20:55:45.702690\",\n",
       "      \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_index.lbl\"\n",
       "    },\n",
       "    \"inventory\": {\n",
       "      \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_inventory.lbl\"\n",
       "    },\n",
       "    \"moon_summary\": {\n",
-      "      \"timestamp\": \"\",\n",
+      "      \"timestamp\": \"2019-06-08T16:28:22\",\n",
       "      \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_moon_summary.lbl\"\n",
       "    },\n",
       "    \"ring_summary\": {\n",
-      "      \"timestamp\": \"\",\n",
+      "      \"timestamp\": \"2022-08-08T11:54:51.140376\",\n",
       "      \"url\": \"https://pds-rings.seti.org/holdings/metadata/COISS_2xxx/COISS_2999/COISS_2999_ring_summary.lbl\"\n",
       "    },\n",
       "    \"saturn_summary\": {\n",
@@ -374,7 +371,7 @@
     }
    ],
    "source": [
-    "pprint(config['missions']['cassini']['iss'])"
+    "pprint(config[\"missions\"][\"cassini\"][\"iss\"])"
    ]
   },
   {
@@ -401,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
